@@ -38,7 +38,8 @@ mkinfo (struct rmw_target file, struct waste_containers *waste, char *time_now,
         char *time_str_appended, const short cnum);
 
 void
-undo_last_rmw (const char *HOMEDIR, char *time_str_appended);
+undo_last_rmw (const char *HOMEDIR, char *time_str_appended,
+               struct waste_containers *waste, const int waste_dirs_total);
 
 int getch (void);
 
