@@ -1,6 +1,8 @@
 === rmw ChangeLog ===
 
-2016-09-15
+2016-09-17
+
+    enhancement: restoring files with only the basename #14
 
 
 2016-09-16
